--- a/app/css/style.css
+++ b/app/css/style.css
@@ -212,3 +212,16 @@
     animation-duration: 4s; /* יותר איטי — ברירת מחדל של Tailwind זה בערך 1.5s */
   }
 }
+
+@media screen and (max-width: 767px) {
+  #mic-access-tool-general-button {
+    width: 62px !important;
+    height: 55px !important;
+    font-size: 24px !important;
+  }
+
+  #mic-access-tool-general-button img {
+    width: 60px !important;
+    height: 40px !important;
+  }
+}
